# rusty_automation

./: Cargo.toml  README.md
control/: Cargo.toml
control/.cargo/: config.toml
control/src/: etc_helper.rs  lib.rs
control/src/hal/: io_mqtt.rs  mod.rs
simulation/: Cargo.toml
simulation/src/: main.rs  mqtt.rs
simulation/src/actuators/: conveyor.rs  mod.rs
simulation/src/sensors/: mod.rs  simple_detector.rs
