[package]
name = "control"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "control"
path = "src/bin/main.rs"

[[bin]]
name = "etc_diag"
path = "src/bin/etc_diagnostic.rs"

[lib]
name = "control_lib"
path = "src/lib.rs"

[dependencies]
ethercrab = "0.6"
ethercrab-wire = { version = "0.2", features = ["std"] }
ethercrab-wire-derive = "0.2"
log = { version = "0.4.28", features = ["std"] }
pretty_env_logger = { version = "0.5.0" }
simplelog = "*"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
futures-util = "0.3.31"
rumqttc = { version = "0.25.0" }
anyhow = "*"
shell-words = "*"
